# inquisitor

./: .gitignore  Dockerfile  LICENSE  README.md  compose.yml  config.example.toml  launch.py  pyproject.toml  schema.sql
inquisitor/: __init__.py  __main__.py  bot.py  config.py  error.py
inquisitor/ext/: game_utils.py  turn_tracking.py
